@@ -18,6 +18,10 @@ CHANGES for LIRE
   - Adapted .gitignore from https://github.com/boeboe/LIRE/ fork
   - Adapted pom.xml from https://github.com/boeboe/LIRE/ fork
 
+2015-09-23
+==========
+  - Fixed Extractor bug.
+
 2015-09-22
 ==========
   - Changed MetricSpaces query mode to term boosting to reduce size of query.
